Added sma_breakout design, little board that connects the SMA jumper from the DAC card to the driver board.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ fp-info-cache
 /simetrix/netlist.net
 /main/main_board/Transcode Report.txt
 /main/lv_regs/*.bck
+/dac/output
+/driver/out_filter/gbr
+/driver/sma_breakout/output
